kubernetes/base/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: aurix-platform
spec:
  mtls:
    mode: STRICT
